# CPP_Telegram_GPT

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  vcpkg.json
.github/workflows/: build.yml
include/: custom_env.hpp  custom_gpt_chat.hpp  custom_proxy.hpp  custom_telegram_bot.hpp  custom_telegram_users.hpp  openai.hpp
src/: custom_env.cpp  custom_gpt_chat.cpp  custom_proxy.cpp  custom_telegram_bot.cpp  custom_telegram_users.cpp  main.cpp
